[project]
name = "invoice_extraction"
version = "0.1.0"
description = "Invoice extraction from PDFs using a CrewAI flow"
authors = [{ name = "CrewAI", email = "contact@crewai.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.9.3",
    "pdfplumber>=0.11",
    "psycopg2-binary>=2.9",
    "python-dateutil",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "humanize>=4.12.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.0",
    "streamlit>=1.45.1",
    "pymupdf>=1.24",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "litellm>=1.75.3",
]

[project.scripts]
kickoff = "invoice_extraction.main:kickoff"
run_crew = "invoice_extraction.main:kickoff"
plot = "invoice_extraction.main:plot"
run_with_trigger = "invoice_extraction.main:run_with_trigger"
run_local = "invoice_extraction.main:run_local"
run_gdrive = "invoice_extraction.main:run_gdrive"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invoice_extraction"]

[tool.crewai]
type = "flow"
